doc/bnf.txt
Program        := Statement*

Statement      := Expr;
               := if (Expr) Statement
               := if (Expr) Statement else Statement

Expr           := AssignmentExpr

AssignmentExpr := EqualityExpr
               := EqualityExpr = AssignmentExpr

EqualityExpr   := RelationalExpr
               := EqualityExpr == RelationalExpr
               := EqualityExpr != RelationalExpr

RelationalExpr := AddExpr
               := RelationalExpr < AddExpr
               := RelationalExpr > AddExpr
               := RelationalExpr <= AddExpr
               := RelationalExpr >= AddExpr

AddExpr        := MulExpr
               := AddExpr + MulExpr
               := AddExpr - MulExpr

MulExpr        := PrimaryExpr
               := MulExpr * PrimaryExpr
               := MulExpr / PrimaryExpr

PrimaryExpr    := Num
               := (Expr)
               := Identifier
